--- a/.github/workflows/build-xcframework-packages.yml
+++ b/.github/workflows/build-xcframework-packages.yml
@@ -66,6 +66,6 @@ jobs:
               --silent \
               --fail \
               --show-error \
-              ${{ inputs.repository_url }}/nightly/ || { echo "Upload failed"; exit 1; }
+              ${{ inputs.repository_url }} || { echo "Upload failed"; exit 1; }
           done
         if: inputs.repository_url != ''
