--- a/csharp/msbuild/ice.common.props
+++ b/csharp/msbuild/ice.common.props
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <!-- Required for the project configurations to show up in settings editor -->
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|Any CPU'">
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|Any CPU'">
-  </PropertyGroup>
-
   <PropertyGroup>
     <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
     <Platform Condition="'$(Platform)' == ''">Any CPU</Platform>
@@ -29,7 +23,7 @@
   </PropertyGroup>
 
   <!-- Import Ice version settings -->
-  <Import Project="$(MSBuildThisFileDirectory)..\..\config\icebuilder.props"/>
+  <Import Project="$(MSBuildThisFileDirectory)..\..\config\ice.version.props"/>
 
 <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DebugType>portable</DebugType>
