--- a/.github/workflows/build-cpp-nuget-package.yml
+++ b/.github/workflows/build-cpp-nuget-package.yml
@@ -47,5 +47,16 @@ jobs:
 
       - name: Publish NuGet Packages
         run: |
-          dotnet nuget push cpp\msbuild\zeroc.ice.v143\*.nupkg --source ${{ inputs.source_url }} --api-key ${{ secrets.NUGET_API_KEY }}
+          $packages = @(
+              Get-ChildItem -Path tools -Filter "*.nupkg" -File -Recurse,
+              Get-ChildItem -Path tools -Filter "*.snupkg" -File -Recurse,
+              Get-ChildItem -Path cpp\msbuild\zeroc.ice.v143 -Filter "*.nupkg" -File -Recurse,
+              Get-ChildItem -Path cpp\msbuild\zeroc.ice.v143 -Filter "*.snupkg" -File -Recurse
+          )
+
+          foreach ($package in $packages) {
+              Write-Host "Publishing package: $($package.FullName)"
+              nuget push $package.FullName --source ${{ inputs.source_url }} --api-key ${{ secrets.NUGET_API_KEY }}
+              if ($LASTEXITCODE -ne 0) { throw "nuget push failed" }
+          }
         if: inputs.source_url != ''
