Fix NuGet push in nightly release workflows

--- a/.github/workflows/build-cpp-nuget-package.yml
+++ b/.github/workflows/build-cpp-nuget-package.yml
@@ -48,9 +48,9 @@ jobs:
       - name: Publish NuGet Packages
         run: |
           $packages = @(
-              Get-ChildItem -Path tools -Filter "*.nupkg" -File -Recurse,
-              Get-ChildItem -Path tools -Filter "*.snupkg" -File -Recurse,
-              Get-ChildItem -Path cpp\msbuild\zeroc.ice.v143 -Filter "*.nupkg" -File -Recurse,
+              Get-ChildItem -Path tools -Filter "*.nupkg" -File -Recurse
+              Get-ChildItem -Path tools -Filter "*.snupkg" -File -Recurse
+              Get-ChildItem -Path cpp\msbuild\zeroc.ice.v143 -Filter "*.nupkg" -File -Recurse
               Get-ChildItem -Path cpp\msbuild\zeroc.ice.v143 -Filter "*.snupkg" -File -Recurse
           )
 
