--- a/config/ice.version.props
+++ b/config/ice.version.props
@@ -2,10 +2,10 @@
 <!-- Copyright (c) ZeroC, Inc. -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <IceVersion>3.8a0</IceVersion>
-    <IceIntVersion>30850</IceIntVersion>
-    <IceVersionMM>3.8</IceVersionMM>
-    <IceSoVersion>38a0</IceSoVersion>
-    <IcePackageVersion>3.8.0-alpha0</IcePackageVersion>
+    <IceVersion Condition="'$(IceVersion)' == ''">3.8a0</IceVersion>
+    <IceIntVersion Condition="'$(IceIntVersion)' == ''">30850</IceIntVersion>
+    <IceVersionMM Condition="'$(IceVersionMM)' == ''">3.8</IceVersionMM>
+    <IceSoVersion Condition="'$(IceSoVersion)' == ''">38a0</IceSoVersion>
+    <IcePackageVersion Condition="'$(IcePackageVersion)' == ''">3.8.0-alpha0</IcePackageVersion>
   </PropertyGroup>
 </Project>
