--- a/csharp/src/Directory.Build.props
+++ b/csharp/src/Directory.Build.props
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="$(MSBuildThisFileDirectory)..\..\config\ice.version.props" />
     <PropertyGroup>
+        <!-- The version for all NuGet packages built with this distribution. -->
+        <!-- Defaults to IcePackageVersion, which is set in ice.version.props imported above. -->
+        <PackageVersion>$(IcePackageVersion)</PackageVersion>
         <!-- Include PDB in the built .nupkg -->
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
         <!-- TODO: move to common.props and fix analyzer warnings in tests -->
