--- a/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.targets
+++ b/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.targets
@@ -50,11 +50,8 @@
     <Target Name="SliceCompile" BeforeTargets="CLCompile"
             Condition="@(SliceCompile) != ''">
 
-        <Error Text="Ice Installation invalid or not detected. Invalid IceHome setting `$(IceHome)'"
-               Condition="!Exists('$(IceHome)')" />
-
-        <Error Text="Ice Installation invalid or not detected. Invalid IceToolsPath setting `$(IceToolsPath)'"
-               Condition="!Exists('$(IceToolsPath)')" />
+        <Error Text="IceToolsPath is set to a non-existing directory: `$(IceToolsPath)'. Did you forget to build the slice2cpp compiler?"
+           Condition="!Exists('$(IceToolsPath)')" />
 
         <!--
             Create the output directories
