Add CMake support files

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -51,3 +51,7 @@ all:: srcs tests doxygen_examples
 
 install:: | $(DESTDIR)$(install_configdir)
 	$(Q)$(call install-data,templates.xml,$(lang_srcdir)/config,$(install_configdir))
+
+install:: | $(DESTDIR)$(install_configdir)
+	$(Q)$(MKDIR) -p $(DESTDIR)$(libdir)/cmake/Ice
+	$(Q)$(call install-data,IceConfig.cmake IceTargets.cmake slic2cpp.cmake,$(lang_srcdir)/config,$(DESTDIR)$(libdir)/cmake/Ice)
