--- a/java/gradle/ice.gradle
+++ b/java/gradle/ice.gradle
@@ -9,18 +9,15 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: "gradle.plugin.com.zeroc.gradle.ice-builder", name: 'slice', version: "1.5.0"
         classpath "com.diffplug.spotless:spotless-plugin-gradle:6.25.0"
     }
 }
 
-apply plugin: com.zeroc.gradle.icebuilder.slice.SlicePlugin
 apply plugin: com.diffplug.gradle.spotless.SpotlessPlugin
 
 slice {
-    cppConfiguration = project.cppConfiguration
-    cppPlatform = project.cppPlatform
     iceHome = new File(project.ext.topSrcDir).getCanonicalPath()
+    iceToolsPath = "${new File(project.ext.topSrcDir).getCanonicalPath()}/cpp/bin"
 }
 
 spotless {
