--- a/java/src/com.zeroc.glacier2/build.gradle
+++ b/java/src/com.zeroc.glacier2/build.gradle
@@ -4,9 +4,11 @@ project.ext.displayName = "Glacier2"
 project.ext.moduleName = "com.zeroc.glacier2"
 project.ext.description = "Firewall traversal for Ice"
 
-slice {
-    java {
-        srcDir = "$project.ext.topSrcDir/slice/Glacier2"
+sourceSets {
+    main {
+        slice {
+            srcDir "$project.ext.topSrcDir/slice/Glacier2"
+        }
     }
 }
 
