--- a/java/src/com.zeroc.icebox/build.gradle
+++ b/java/src/com.zeroc.icebox/build.gradle
@@ -4,9 +4,11 @@ project.ext.displayName = "IceBox"
 project.ext.moduleName = "com.zeroc.icebox"
 project.ext.description = "IceBox is an easy-to-use framework for Ice application services"
 
-slice {
-    java {
-        srcDir = "$project.ext.topSrcDir/slice/IceBox"
+sourceSets {
+    main {
+        slice {
+            srcDir "$project.ext.topSrcDir/slice/IceBox"
+        }
     }
 }
 
