--- a/java/test/build.gradle
+++ b/java/test/build.gradle
@@ -12,13 +12,13 @@ sourceSets {
         }
 
         slice {
-            srcDir("Ice")
-            srcDir("Glacier2")
-            srcDir("IceDiscovery")
-            srcDir("IceGrid")
-            srcDir("IceBox")
-            srcDir("IceSSL")
-            srcDir("Slice")
+            srcDir("${testDir}/Ice")
+            srcDir("${testDir}/Glacier2")
+            srcDir("${testDir}/IceDiscovery")
+            srcDir("${testDir}/IceGrid")
+            srcDir("${testDir}/IceBox")
+            srcDir("${testDir}/IceSSL")
+            srcDir("${testDir}/Slice")
 
             include("**/*.ice")
         }
