--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -54,8 +54,12 @@ install:: | $(DESTDIR)$(install_configdir)
 
 install:: install-cmake
 
-# We use a variable here to avoid splitting the call onto multiple lines. Splitting before the install directory
-# causes any indentation to be included in the directory name, which is incorrect.
-install_cmakedir = $(install_libdir)$($(build-platform)_cmakedir)/Ice-$(mmversion)
-$(eval $(call install-data-files,$(wildcard $(lang_srcdir)/config/*.cmake),$(lang_srcdir)/config,$(install_cmakedir),\
-	install-cmake,"Installing CMake files"))
+# Install CMake files for a platform
+# $(call install-cmake-files,$1=platform)
+define install-cmake-files
+$(eval $(call install-data-files,$(wildcard $(lang_srcdir)/config/*.cmake),$(lang_srcdir)/config,$(install_libdir)$$($(1)_cmakedir)/Ice-$(mmversion),\
+	install-cmake-$(1),"Installing CMake files for $(1)"))
+install-cmake:: install-cmake-$(1)
+endef
+
+$(foreach p,$(platforms),$(eval $(call install-cmake-files,$p)))
