Add CMake support files  (#3630)

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -51,3 +51,15 @@ all:: srcs tests doxygen_examples
 
 install:: | $(DESTDIR)$(install_configdir)
 	$(Q)$(call install-data,templates.xml,$(lang_srcdir)/config,$(install_configdir))
+
+install:: install-cmake
+
+# Install CMake files for a platform
+# $(call install-cmake-files,$1=platform)
+define install-cmake-files
+$(eval $(call install-data-files,$(wildcard $(lang_srcdir)/config/*.cmake),$(lang_srcdir)/config,$(install_libdir)$$($(1)_cmakedir)/Ice-$(mmversion),\
+	install-cmake-$(1),"Installing CMake files for $(1)"))
+install-cmake:: install-cmake-$(1)
+endef
+
+$(foreach p,$(platforms),$(eval $(call install-cmake-files,$p)))
