--- a/.github/workflows/build-xcframework-packages.yml
+++ b/.github/workflows/build-xcframework-packages.yml
@@ -41,6 +41,11 @@ jobs:
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
 
+      - name: Setup Cache
+        uses: ./.github/actions/setup-cache
+        with:
+          prefix: build-xcframework-packages
+
       - name: Build XCFramework Packages
         run: make OPTIMIZE=yes PLATFORMS="all" CONFIGS="static" srcs
         working-directory: cpp
