--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
+        with:
+          use_matlab: true
 
       - name: Build MATLAB on Ubuntu
         uses: ./.github/actions/build
